Attempting to fix styles issue
Updated the link to the stylesheet so that it works properly on github pages. The CSS folder was written as lowercase when the stylesheet was linked, so it worked from a local editor but not on github pages which seems to be more strict

--- a/index.html
+++ b/index.html
@@ -4,42 +4,37 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="CSS/navBar.css">
 		<link rel="stylesheet" type="text/css" href="CSS/slidingImageBar.css">
-			<script type = "text/javascript" src="JavaScripts/slidingImageBar.js"></script>   
+		<script type = "text/javascript" src="JavaScripts/slidingImageBar.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Simonetta&display=swap" rel="stylesheet">
-		<link href="css/style.css" type="text/css" rel="stylesheet"> 
+		<link rel="stylesheet" type="text/css" href="CSS/style.css">
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	
-	
 	</head>
 
     <body>
         <!--
                 Navigation bar design
         -->
-			<ul>
-			
+		<ul>
 			<li><a href="Common/Login.html">Sign in</a></li>
-			<li><a href="Common/Registration.html">Register</a></li>
-			</ul>
-            
-			<h1 class="headcenter">Tripster</h1>
-			
-		   
+	        <li><a href="Common/Registration.html">Register</a></li>
+		</ul>
+
+		<h1 class="headcenter">Tripster</h1>
+
         <div class="wrap">
 			<div class="search">
-			
 				<h3 class="headcenter1">Where do you want to go?</h3>
 				<input type="text" name="" class="searchterm" placeholder="Search here!">
 				<button type="submit" class="searchbtn">
-					<i class="fa fa-search"></i>
+				<i class="fa fa-search"></i>
 			</div>
 		</div>
-			
+
         <script type = "text/javascript" src="JavaScripts/slidingImageBar.js"></script>
 
         <!--
              Road trip plannenr first grid
         -->
-		
+
 	</body>
 </html>
