Adding more design to home page
I went through and changed up the styling of the home page. I changed some cosmetic things and some things I changed for purposes of being able to make positioning better on mobile later on and things like that.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="CSS/navBar.css">
 		<link rel="stylesheet" type="text/css" href="CSS/slidingImageBar.css">
         <link href="https://fonts.googleapis.com/css?family=Simonetta&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
@@ -13,21 +14,32 @@
         <!--
                 Navigation bar design
         -->
-		<ul>
+		<ul class="navbar">
+            <li id="tripster-logo-nav"><a href="index.html">Tripster</a></li>
 			<li><a href="Common/Login.html">Sign in</a></li>
-	        <li><a href="Common/Registration.html">Register</a></li>
+	        <li><a href="Common/Registration.html">Create Account</a></li>
 		</ul>
 
-		<h1 class="headcenter">Tripster</h1>
+        <div class="home-big-image">
+            <h1 class="headcenter">Tripster</h1>
 
-        <div class="wrap">
-			<div class="search">
-				<h3 class="headcenter1">Where do you want to go?</h3>
-				<input type="text" name="" class="searchterm" placeholder="Search here!">
-				<button type="submit" class="searchbtn">
-				<i class="fa fa-search"></i>
-			</div>
-		</div>
+            <div class="wrap">
+    			<div class="search">
+    				<h3 class="headcenter1">Where do you want to go?</h3>
+    				<input type="text" name="" class="searchterm" placeholder="Search here!">
+    				<button type="submit" class="searchbtn">
+    				<i class="fa fa-search"></i>
+    			</div>
+    		</div>
+        </div>
+
+        <div id="browse-container">
+            <p>v v Button/Info for going to Browsing page will go here v v</p>
+        </div>
+
+        <div class="footer">
+            <p>This is where footer stuff will go</p>
+        </div>
 
         <script type = "text/javascript" src="JavaScripts/slidingImageBar.js"></script>
 
