--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
 
     <body>
         <!--
-                Navigation bar design
+        - - - - - - Navigation bar design - - - - - - - - - - - - - - - - - - - -
         -->
 		<ul class="navbar">
-            <li id="tripster-logo-nav"><a href="index.html">Tripster</a></li>
-			<li><a href="Common/Login.html">Sign in</a></li>
-	        <li><a href="Common/Registration.html">Create Account</a></li>
+            <li id="tripster-logo-nav" class="nav-button"><a href="index.html">Tripster</a></li>
+            <li class="nav-button"><a href="#generateTrip">Create</a></li>
+            <li class="nav-button"><a href="#browse">Browse</a></li>
+            <li class="nav-button"><a href="#profile">Profile</a></li>
+			<li class="right-nav-buttons"><a href="Common/Login.html">Sign in</a></li>
+	        <li class="right-nav-buttons"><a href="Common/Registration.html">Create Account</a></li>
 		</ul>
+        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --->
 
         <div class="home-big-image">
             <h1 class="headcenter">Tripster</h1>
