--- a/Common/Login.html
+++ b/Common/Login.html
@@ -91,7 +91,7 @@ a {
   	</div>
 	
   	<p>
-  		Not yet a member? <a href="registration.html">Sign up</a>
+  		Not yet a member? <a href="Registration.html">Sign up</a>
   	</p>
 	
 		<p>Forgot your password? <a href="#">Click here to reset it</a>.</p>
