--- a/Common/Registration.html
+++ b/Common/Registration.html
@@ -100,7 +100,7 @@ a {
   	</div>
 
   	<p>
-  		Already a member? <a href="login.html">Sign in</a>
+  		Already a member? <a href="Login.html">Sign in</a>
   	</p>
 </div>
 </body>
