--- a/Common/Login.html
+++ b/Common/Login.html
@@ -7,94 +7,116 @@ and open the template in the editor.
 <html>
     <head>
         <title>Sign in page</title>
-	<link href="" type="text/css" rel="stylesheet"> 
-    <link href="" type="text/css" rel="stylesheet">    
 		<meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		
-  <style>
-  * {
-  margin: 0px;
-  padding: 0px;
-}
-body {
-  font-size: 120%;
-  background: #F8F8FF;
-}
+        <link href="https://fonts.googleapis.com/css?family=Simonetta&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="../CSS/style.css">
+		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/navBar.css">
 
-.header {
-  width: 30%;
-  margin: 50px auto 0px;
-  color: white;
-  background: #5F9EA0;
-  text-align: center;
-  border: 1px solid #B0C4DE;
-  border-bottom: none;
-  border-radius: 10px 10px 0px 0px;
-  padding: 20px;
-}
+    <style>
+    * {
+      margin: 0px;
+      padding: 0px;
+    }
+    html, body {
+    	font-family: arial;
+        margin: 0;
+    	height: 100%;
+    }
 
-.input-group {
-  margin: 10px 0px 10px 0px;
-}
-.input-group label {
-  display: block;
-  text-align: left;
-  margin: 3px;
-}
-.input-group input {
-  height: 30px;
-  width: 93%;
-  padding: 5px 10px;
-  font-size: 16px;
-  border-radius: 5px;
-  border: 1px solid gray;
-}
-.btn {
-  padding: 10px;
-  font-size: 15px;
-  color: white;
-  background: black;
-  border: none;
-  border-radius: 5px;
-}
-a {
-  color: red;
-}
+    body {
+      font-size: 120%;
+      background: #F8F8FF;
+    }
 
-/* Set a grey background color and center the text of the "sign in" section */
-.signin {
- 
-  text-align: center;
-}
+    .header {
+      width: 30%;
+      margin: 50px auto 0px;
+      color: white;
+      position: relative;
+      background: #5F9EA0;
+      text-align: center;
+      border: 1px solid #B0C4DE;
+      border-bottom: none;
+      border-radius: 10px 10px 0px 0px;
+      padding: 20px;
+    }
 
-</style>
+    .input-group {
+      margin: 10px 0px 10px 0px;
+    }
+    .input-group label {
+      display: block;
+      text-align: left;
+      margin: 3px;
+    }
+    .input-group input {
+      height: 30px;
+      width: 93%;
+      padding: 5px 10px;
+      font-size: 16px;
+      border-radius: 5px;
+      border: 1px solid gray;
+    }
+    .btn {
+      padding: 10px;
+      font-size: 15px;
+      color: white;
+      background: black;
+      border: none;
+      border-radius: 5px;
+    }
+    a {
+      color: red;
+    }
+
+    /* Set a grey background color and center the text of the "sign in" section */
+    .signin {
+
+      text-align: center;
+    }
+
+    </style>
 </head>
 
 <body>
-<div class="header">
-		<h2>Login</h2>
-    
-	
-	<div class="input-group">
-  		<label>Username</label>
-  		<input type="text" name="username" >
-  	</div>
-	
-  	<div class="input-group">
-  		<label>Password</label>
-  		<input type="password" name="password">
-  	</div>
-	
-  	<div class="input-group">
-  		<button type="submit" class="btn" name="login_user">Login</button>
-  	</div>
-	
-  	<p>
-  		Not yet a member? <a href="Registration.html">Sign up</a>
-  	</p>
-	
-		<p>Forgot your password? <a href="#">Click here to reset it</a>.</p>
-</div>
+
+    <!-- - - - - - - Navigation Bar Elements - - - - - - - - - - - - - - - - - - - - -->
+    <ul class="navbar">
+        <li id="tripster-logo-nav" class="nav-button"><a href="..\index.html">Tripster</a></li>
+        <li class="nav-button"><a href="create.html">Create</a></li>
+        <li class="nav-button"><a href="#browse">Browse</a></li>
+        <li class="nav-button"><a href="#profile">Profile</a></li>
+        <li class="right-nav-buttons"><a href="Login.html">Sign in</a></li>
+        <li class="right-nav-buttons"><a href="Registration.html">Create Account</a></li>
+    </ul>
+    <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+    <div class="header">
+    		<h2>Login</h2>
+
+
+    	<div class="input-group">
+      		<label>Username</label>
+      		<input type="text" name="username" >
+      	</div>
+
+      	<div class="input-group">
+      		<label>Password</label>
+      		<input type="password" name="password">
+      	</div>
+
+      	<div class="input-group">
+      		<button type="submit" class="btn" name="login_user">Login</button>
+      	</div>
+
+      	<p>
+      		Not yet a member? <a href="Registration.html">Sign up</a>
+      	</p>
+
+    		<p>Forgot your password? <a href="#">Click here to reset it</a>.</p>
+    </div>
 </body>
 </html>
