--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <title>Tripster</title>
 		<link rel="stylesheet" type="text/css" href="CSS/navBar.css">
-		<link rel="stylesheet" type="text/css" href="CSS/slidingImageBar.css">
         <link href="https://fonts.googleapis.com/css?family=Simonetta&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
@@ -16,7 +18,7 @@
         -->
 		<ul class="navbar">
             <li id="tripster-logo-nav" class="nav-button"><a href="index.html">Tripster</a></li>
-            <li class="nav-button"><a href="#generateTrip">Create</a></li>
+            <li class="nav-button"><a href="\Common\create.html">Create</a></li>
             <li class="nav-button"><a href="#browse">Browse</a></li>
             <li class="nav-button"><a href="#profile">Profile</a></li>
 			<li class="right-nav-buttons"><a href="Common/Login.html">Sign in</a></li>
@@ -24,29 +26,31 @@
 		</ul>
         <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --->
 
-        <div class="home-big-image">
-            <h1 class="headcenter">Tripster</h1>
+        <div class = "page-wrapper">
+            <div class="main-content">
+                <div class="home-big-image">
+                    <div class="haze"></div>
+                    <h1 class="headcenter">Tripster</h1>
 
-            <div class="wrap">
-    			<div class="search">
-    				<h3 class="headcenter1">Where do you want to go?</h3>
-    				<input type="text" name="" class="searchterm" placeholder="Search here!">
-    				<button type="submit" class="searchbtn">
-    				<i class="fa fa-search"></i>
-    			</div>
-    		</div>
+                    <div class="wrap">
+            			<div class="search">
+            				<h3 class="headcenter1">Where do you want to go?</h3>
+            				<input type="text" name="" class="searchterm" placeholder="Search here!">
+            				<button type="submit" class="searchbtn">
+            				<i class="fa fa-search"></i>
+            			</div>
+            		</div>
+                </div>
+
+                <div id="browse-container">
+                    <p>v v Button/Info for going to Browsing page will go here v v</p>
+                </div>
+            </div>
+
+            <div class="footer">
+                <p>This is where footer stuff will go</p>
+            </div>
         </div>
-
-        <div id="browse-container">
-            <p>v v Button/Info for going to Browsing page will go here v v</p>
-        </div>
-
-        <div class="footer">
-            <p>This is where footer stuff will go</p>
-        </div>
-
-        <script type = "text/javascript" src="JavaScripts/slidingImageBar.js"></script>
-
         <!--
              Road trip plannenr first grid
         -->
