--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <title>Tripster</title>
-		<link rel="stylesheet" type="text/css" href="CSS/navBar.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+		<link rel="stylesheet" type="text/css" href="CSS/boot_nav.css">
         <link href="https://fonts.googleapis.com/css?family=Simonetta&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="CSS/style.css">
@@ -13,18 +14,26 @@
 	</head>
 
     <body>
-        <!--
-        - - - - - - Navigation bar design - - - - - - - - - - - - - - - - - - - -
-        -->
-		<ul class="navbar">
-            <li id="tripster-logo-nav" class="nav-button"><a href="index.html">Tripster</a></li>
-            <li class="nav-button"><a href="Common/create.html">Create</a></li>
-            <li class="nav-button"><a href="#browse">Browse</a></li>
-            <li class="nav-button"><a href="#profile">Profile</a></li>
-			<li class="right-nav-buttons"><a href="Common/Login.html">Sign in</a></li>
-	        <li class="right-nav-buttons"><a href="Common/Registration.html">Create Account</a></li>
-		</ul>
-        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - --->
+        <!-- - - - - - - Navigation Bar Elements - - - - - - - - - - - - - - - - - - - - -->
+        <nav class="nav navbar-expand-lg fixed-top">
+            <li class="nav-logo nav-item active"><a class="nav-logo-link nav-link my-lg-0" href="..\index.html">Tripster</a></li>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="navbar-collapse collapse" id="collapsingNavbar">
+        		<ul class="navbar-nav">
+                    <li class="nav-item active"><a class="nav-link my-lg-0 align-content-center" href="Common/create.html">Create</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="Common/browse.html">Browse</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#profile">Profile</a></li>
+        		</ul>
+
+                <ul class="navbar-nav ml-auto">
+                    <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Common/Login.html">Sign in</a></li>
+        	        <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Common/Registration.html">Create Account</a></li>
+                </ul>
+            </div>
+        </nav>
+        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
         <div class = "page-wrapper">
             <div class="main-content">
@@ -55,5 +64,8 @@
              Road trip plannenr first grid
         -->
 
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 	</body>
 </html>
