collapsing nav bar
it isn't super pretty but it does the job

--- a/Common/create.html
+++ b/Common/create.html
@@ -15,7 +15,7 @@
 
     <body>
         <!-- - - - - - - Navigation Bar Elements - - - - - - - - - - - - - - - - - - - - -->
-        <nav class="nav navbar-expand-lg fixed-top">
+        <nav class="nav navbar navbar-dark navbar-expand-lg fixed-top">
             <li class="nav-logo nav-item active"><a class="nav-logo-link nav-link my-lg-0" href="../index.html">Tripster</a></li>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
                 <span class="navbar-toggler-icon"></span>
