--- a/Common/Login.html
+++ b/Common/Login.html
@@ -86,7 +86,7 @@ and open the template in the editor.
 <body>
 
     <!-- - - - - - - Navigation Bar Elements - - - - - - - - - - - - - - - - - - - - -->
-    <nav class="nav navbar-expand-lg fixed-top">
+    <nav class="nav navbar navbar-dark navbar-expand-lg fixed-top">
         <li class="nav-logo nav-item active"><a class="nav-logo-link nav-link my-lg-0" href="../index.html">Tripster</a></li>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
             <span class="navbar-toggler-icon"></span>
