--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
     <body>
         <!-- - - - - - - Navigation Bar Elements - - - - - - - - - - - - - - - - - - - - -->
-        <nav class="nav navbar-expand-lg fixed-top">
+        <nav class="nav navbar navbar-expand-lg navbar-dark fixed-top">
             <li class="nav-logo nav-item active"><a class="nav-logo-link nav-link my-lg-0" href="index.html">Tripster</a></li>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar" aria-controls="collapsingNavbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="navbar-collapse collapse" id="collapsingNavbar">
+              </button>
+            <div class="collapse navbar-collapse" id="collapsingNavbar">
         		<ul class="navbar-nav">
                     <li class="nav-item active"><a class="nav-link my-lg-0 align-content-center" href="Common/create.html">Create</a></li>
                     <li class="nav-item active"><a class="nav-link" href="Common/browse.html">Browse</a></li>
