--- a/Common/Login.html
+++ b/Common/Login.html
@@ -95,7 +95,7 @@ and open the template in the editor.
             <ul class="navbar-nav">
                 <li class="nav-item active"><a class="nav-link my-lg-0 align-content-center" href="create.html">Create</a></li>
                 <li class="nav-item active"><a class="nav-link" href="browse.html">Browse</a></li>
-                <li class="nav-item active"><a class="nav-link" href="#profile">Profile</a></li>
+                <li class="nav-item active"><a class="nav-link" href="UserProfile.html">Profile</a></li>
             </ul>
 
             <ul class="navbar-nav ml-auto">
