--- a/Common/UploadTrip.html
+++ b/Common/UploadTrip.html
@@ -17,7 +17,26 @@
 	</head>
 
     <body>
+      <!-- - - - - - - Navigation Bar Elements - - - - - - - - - - - - - - - - - - - - -->
+    <nav class="nav navbar navbar-dark navbar-expand-lg fixed-top">
+      <li class="nav-logo nav-item active"><a class="nav-logo-link nav-link my-lg-0" href="../index.html">Tripster</a></li>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse" id="collapsingNavbar">
+          <ul class="navbar-nav">
+              <li class="nav-item active"><a class="nav-link my-lg-0 align-content-center" href="create.html">Create</a></li>
+              <li class="nav-item active"><a class="nav-link" href="browse.html">Browse</a></li>
+              <li class="nav-item active"><a class="nav-link" href="UserProfile.html">Profile</a></li>
+          </ul>
 
+          <ul class="navbar-nav ml-auto">
+              <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Login.html">Sign in</a></li>
+              <li class="right-nav-item nav-item active"><a class="right-nav-link" href="Registration.html">Create Account</a></li>
+          </ul>
+      </div>
+  </nav>
+  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
       <div class="container-fluid">
 
       <div class="row extra_margin">
