--- a/Common/create.html
+++ b/Common/create.html
@@ -24,7 +24,7 @@
         		<ul class="navbar-nav">
                     <li class="nav-item active"><a class="nav-link my-lg-0 align-content-center" href="create.html">Create</a></li>
                     <li class="nav-item active"><a class="nav-link" href="browse.html">Browse</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="#profile">Profile</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="UserProfile.html">Profile</a></li>
         		</ul>
 
                 <ul class="navbar-nav ml-auto">
