some style and structure changes

--- a/Common/create.html
+++ b/Common/create.html
@@ -66,7 +66,7 @@
                     </div>
 
                     <div class="bottom-container row justify-content-center">
-                        <div class="param-options-container col-3 justify-content-center">
+                        <div class="param-options-container col-2 justify-content-center">
                             <div class="parameter row-sm align-content-center">
                                 <p>Other options will go here</p>
                             </div>
@@ -78,17 +78,9 @@
                             </div>
                         </div>
 
-                        <div class="routes-container col-6">
+                        <div id = 'route' class="routes-container col-6">
                             <div class="route-option row-md-2">
-                                <!-- Later on this will likely be created dynamically using javascript, based on the generation code -->
-                                <!-- For now it will serve as a placeholder and template for what the dynamically created one will look like -->
                                 <h1 class="col my-auto">Route Option #1</h1>
-                            </div>
-                            <div class="route-option row-md-2">
-                                <h1 class="col my-auto">Route Option #2</h1>
-                            </div>
-                            <div class="route-option row-md-2 align-items-center">
-                                <h1 class="col my-auto">Route Option #3</h1>
                             </div>
                         </div>
                     </div>
@@ -107,7 +99,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <!-- Google Maps JavaScript API -->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVRAZxhQYR03q7YMQUcdZbWZaSBWEdeOg&callback=initMap" async defer></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap" async defer></script>
         <!-- <script src="https://www.googleapis.com/geolocation/v1/geolocate?key=AIzaSyBVRAZxhQYR03q7YMQUcdZbWZaSBWEdeOg"></script> -->
 	</body>
 </html>
