--- a/Common/UploadTrip.html
+++ b/Common/UploadTrip.html
@@ -3,8 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Simonetta&display=swap" rel="stylesheet">
-    <link href="../css/uploadtrip.css" type="text/css" rel="stylesheet">
-    <link href="../css/boot_nav.css.css" type="text/css" rel="stylesheet">
+    <link href="../CSS/uploadtrip.css" type="text/css" rel="stylesheet">
+    <link href="../CSS/boot_nav.css.css" type="text/css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
