--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
             			<div class="search">
             				<h3 class="headcenter1">Where do you want to go?</h3>
             				<input type="text" name="" class="searchterm" placeholder="Search here!">
-            				<button type="submit" class="searchbtn">
-            				<i class="fa fa-search"></i>
+            				<a href="Common/create.html"><button type="submit" class="searchbtn"><i class="fa fa-search"></i></a>
             			</div>
             		</div>
                 </div>
