--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               </button>
             <div class="collapse navbar-collapse" id="collapsingNavbar">
         		<ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link my-lg-0 align-content-center" href="Common/create.html">Create</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="Common/create.html">Create</a></li>
                     <li class="nav-item active"><a class="nav-link" href="Common/browse.html">Browse</a></li>
                     <li class="nav-item active"><a class="nav-link" href="Common/UserProfile.html">Profile</a></li>
         		</ul>
@@ -60,10 +60,8 @@
                 <p>This is where footer stuff will go</p>
             </div>
         </div>
-        <!--
-             Road trip plannenr first grid
-        -->
 
+        <!-- Bootstrap Related Scripts -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
