--- a/Common/Login.html
+++ b/Common/Login.html
@@ -15,36 +15,33 @@ and open the template in the editor.
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="../CSS/navBar.css">
 
-    <style>
-    * {
-      margin: 0px;
-      padding: 0px;
-    }
-    html, body {
-    	font-family: arial;
-        margin: 0;
-    	height: 100%;
-    }
+<style>
+* {
+  margin: 0px;
+  padding: 0px;
+}
+body {
+  font-size: 120%;
+  background: url(../Images/road_img4.jpg);
+  background-size: cover;
+  font-family: 'Pacifico', cursive;
+  
+}
 
-    body {
-      font-size: 120%;
-      background: #F8F8FF;
-    }
+.header {
+  width: 30%;
+  margin: 80px auto 50px;
+  
+  color: #FD9301;
+  
+  text-align: center;
+ 
+  border-bottom: none;
+  border-radius: 10px 10px 0px 0px;
+  padding: 50px;
+}
 
-    .header {
-      width: 30%;
-      margin: 50px auto 0px;
-      color: white;
-      position: relative;
-      background: #5F9EA0;
-      text-align: center;
-      border: 1px solid #B0C4DE;
-      border-bottom: none;
-      border-radius: 10px 10px 0px 0px;
-      padding: 20px;
-    }
-
-    .input-group {
+.input-group {
       margin: 10px 0px 10px 0px;
     }
     .input-group label {
