added some styling to the route cards

--- a/Common/create.html
+++ b/Common/create.html
@@ -22,7 +22,7 @@
             </button>
             <div class="navbar-collapse collapse" id="collapsingNavbar">
         		<ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="create.html">Create</a></li>
+                    <li class="nav-item active"><a class="nav-link my-lg-0 align-content-center" href="create.html">Create</a></li>
                     <li class="nav-item active"><a class="nav-link" href="browse.html">Browse</a></li>
                     <li class="nav-item active"><a class="nav-link" href="UserProfile.html">Profile</a></li>
         		</ul>
@@ -65,8 +65,8 @@
                     </div>
 
                     <div class="bottom-container row justify-content-center">
-                        <div class="param-options-container col-2 justify-content-center">
-                            <div class="parameter row-sm align-content-center">
+                        <div class="param-options-container col-md-2 justify-content-center">
+                            <div class="parameter row-sm">
                                 <p>Other options will go here</p>
                             </div>
                             <div class="parameter row-sm">
@@ -77,16 +77,17 @@
                             </div>
                         </div>
 
-                        <div id="accordion" class="col-6">
+                        <div id="accordion" class="route-cards col-md-6">
                             <div class="card">
                                 <div class="card-header round-pill">
-                                    <a class="card-link" data-toggle="collapse" href="#collapseOne">
+                                    <a class="card-link"  href="#collapseOne" data-toggle="collapse">
                                         Route Option #1
                                     </a>
                                 </div>
                                 <div id="collapseOne" class="collapse show" data-parent="#accordion">
                                     <div class="card-body">
                                         <div id="directions-panel"></div>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                                     </div>
                                 </div>
                             </div>
@@ -98,7 +99,7 @@
                                 </div>
                                 <div id="collapseTwo" class="collapse" data-parent="#accordion">
                                     <div class="card-body">
-                                        Test 2
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                                     </div>
                                 </div>
                             </div>
@@ -110,7 +111,7 @@
                                 </div>
                                 <div id="collapseThree" class="collapse" data-parent="#accordion">
                                     <div class="card-body">
-                                        Test 3
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                                     </div>
                                 </div>
                             </div>
@@ -126,14 +127,10 @@
                 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
             </div>
         </div>
-        <!-- Route Generation Scripts -->
         <script src="../JavaScripts/routeGeneration.js"></script>
-
-        <!-- Bootstrap Related Scripts -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
         <!-- Google Maps JavaScript API -->
         <script src="https://maps.googleapis.com/maps/api/js?key=&callback=initMap" async defer></script>
         <!-- <script src="https://www.googleapis.com/geolocation/v1/geolocate?key=AIzaSyBVRAZxhQYR03q7YMQUcdZbWZaSBWEdeOg"></script> -->
