--- a/Common/Login.html
+++ b/Common/Login.html
@@ -16,34 +16,30 @@ and open the template in the editor.
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" type="text/css" href="../CSS/boot_nav.css">
 
-    <style>
+        <style>
     * {
       margin: 0px;
       padding: 0px;
     }
-    html, body {
-    	font-family: arial;
-        margin: 0;
-    	height: 100%;
-    }
-
     body {
       font-size: 120%;
-      background: #F8F8FF;
-      margin: 60px;
+      background: url(../Images/road_img4.jpg);
+      background-size: cover;
+      font-family: 'Pacifico', cursive;
+
     }
 
     .header {
       width: 30%;
-      margin: 50px auto 0px;
-      color: white;
-      position: relative;
-      background: #5F9EA0;
+      margin: 80px auto 50px;
+
+      color: #FD9301;
+
       text-align: center;
-      border: 1px solid #B0C4DE;
+
       border-bottom: none;
       border-radius: 10px 10px 0px 0px;
-      padding: 20px;
+      padding: 50px;
     }
 
     .input-group {
