--- a/Common/Login.html
+++ b/Common/Login.html
@@ -62,7 +62,7 @@ and open the template in the editor.
       padding: 10px;
       font-size: 15px;
       color: white;
-      background: black;
+      background: #FD9301;
       border: none;
       border-radius: 5px;
     }
