add containers for trips to browse
and some other small button styling changes, trying to make the style of everything match

--- a/Common/UserProfile.html
+++ b/Common/UserProfile.html
@@ -9,7 +9,8 @@
         <link rel="stylesheet" type="text/css" href="../CSS/boot_nav.css">
         <link href="https://fonts.googleapis.com/css?family=Simonetta&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="../CSS/userprofile.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/userprofile.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/create_styles.css"
 		<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 
@@ -34,7 +35,7 @@
             </div>
         </nav>
         <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-        <div class="container-fluid">
+        <div id="page-wrapper" class="container-fluid">
 
             <div class="row extra_margin">
 
@@ -74,6 +75,13 @@
 
             </div>
 
+        </div>
+        <div class="footer-container container-fluid">
+            <!-- - - - - - - Footer Elements- - - - - - - - - - - - - - - - - - - - - - - - -->
+            <div class="footer-margin row">
+                <p>This is where footer stuff will go</p>
+            </div>
+            <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  -->
         </div>
 
         <!-- Bootstrap Related Scripts -->
