--- a/Common/create.html
+++ b/Common/create.html
@@ -126,7 +126,7 @@
                     </div>
                     <div class="row justify-content-end">
                             <div class="submit-button col-md-2">
-                                <input class="loc-submit" type="submit" id="submit" value="Save">
+                                <input class="save-submit" type="submit" id="submit" value="Save">
                             </div>
                             <div class="col-md-2"></div>
                     </div>
