--- a/Common/Login.html
+++ b/Common/Login.html
@@ -124,7 +124,7 @@ and open the template in the editor.
       		Not yet a member? <a href="Registration.html">Sign up</a>
       	</p>
 
-    		<p>Forgot your password? <a href="#">Click here to reset it</a>.</p>
+    		<p>Forgot your password? <a href="reset_password.html">Click here to reset it</a>.</p>
     </div>
 
     <!-- Bootstrap Related Scripts -->
