more small styling changes
also just quickly added search bar on browse page

--- a/Common/create.html
+++ b/Common/create.html
@@ -147,7 +147,7 @@
                     </div>
                     <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn badge p-3" data-dismiss="modal">Add to trip</button>
+                    <button type="button" class="btn btn-blue" data-dismiss="modal">Add to trip</button>
                     </div>
                 </div>
                 </div>
@@ -166,7 +166,7 @@
                     </div>
                     <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn badge p-3" data-dismiss="modal">Add to trip</button>
+                    <button type="button" class="btn btn-blue" data-dismiss="modal">Add to trip</button>
                     </div>
                 </div>
                 </div>
@@ -185,7 +185,7 @@
                     </div>
                     <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn badge p-3" data-dismiss="modal">Add to trip</button>
+                    <button type="button" class="btn btn-blue" data-dismiss="modal">Add to trip</button>
                     </div>
                 </div>
                 </div>
