--- a/Common/browse.html
+++ b/Common/browse.html
@@ -43,7 +43,14 @@
                 <h5 class="text-center">What are other travelers up to?</h5>
             </div>
         </div>
+        <div class="row justify-content-center my-2">
+            <div class="col-md-7 search">
+                <input type="text" name="" class="searchBrowse" placeholder="Search for trips or travelers">
+                <button type="submit" class="searchbtn"><i class="fa fa-search"></i>
+            </div> 
+        </div>
         <div class="row justify-content-center">
+            
             <div id="accordion" class="route-cards col-md-8">
                 <div class="card">
                     <div class="card-header round-pill">
